--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "Maintained by": "Musclesonvacation",
     "repository": {
         "type": "git",
-        "url": "https://github.com/muscleman/cryptonote-nodejs-pool.git"
+        "url": "https://github.com/tarmgas/dynge-nodejs-pool.git"
     },
     "dependencies": {
         "async": "1",
@@ -15,7 +15,7 @@
         "cli-color": "*",
         "cryptoforknote-util": "git://github.com/MoneroOcean/node-cryptoforknote-util.git",
         "cryptonight-hashing": "git://github.com/MoneroOcean/node-cryptonight-hashing.git",
-        "multi-hashing": "git://github.com/muscleman/node-multi-hashing.git#ipbc",
+        "multi-hashing": "git://github.com/fancoder/node-multi-hashing.git",
         "dateformat": "*",
         "mailgun.js": "*",
         "node-telegram-bot-api": "*",
