--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "cli-color": "*",
         "cryptoforknote-util": "git://github.com/MoneroOcean/node-cryptoforknote-util.git",
         "cryptonight-hashing": "git://github.com/MoneroOcean/node-cryptonight-hashing.git",
-        "multi-hashing": "https://github.com/turtlecoin/node8-multi-hashing.git",
+        "multi-hashing": "git://github.com/clintar/node-multi-hashing.git#Nan-2.0", 
+        "cryptonote-util": "git://github.com/clintar/node-cryptonote-util.git#Nan-2.0",
         "dateformat": "*",
         "mailgun.js": "*",
         "node-telegram-bot-api": "*",
